validations & associations added for shop model +  ShopHour model created

--- a/app/views/shops/new.html.erb
+++ b/app/views/shops/new.html.erb
@@ -1,5 +1,33 @@
-<%= form_with model: @shop do |f| %>
-    <%= f.label :name %>
-    <%= f.text_field :name %>
-    <%= f.submit %>
+<%= form_with model: @shop do |form| %>
+    <%= form.label :name %>
+    <%= form.text_field :name %>
+
+   <% I18n.t('date.day_names').each_with_index do |day, wday| %>
+     <td class="morning">
+        <div class="form-group">
+          <%= form.label :"#{day.downcase}_opens_at" %>
+          <%= form.select :"#{day.downcase}_opens_at",time_select_options, label: "Open Time", include_blank: "Closed" %>
+        </div>
+
+        <div class="form-group">
+          <%= form.label :"#{day.downcase}_closes_at" %>
+          <%= form.select :"#{day.downcase}_closes_at",time_select_options, label: "Close Time", include_blank: "Closed" %>
+        </div>
+      </td>
+      <td class="afternoon">
+        <div class="form-group">
+          <%= form.label :"#{day.downcase}_re_opens_at" %>
+          <%= form.select :"#{day.downcase}_opens_at",time_select_options, label: "Open Time", include_blank: "Closed" %>
+        </div>
+
+        <div class="form-group">
+        <%= form.label :"#{day.downcase}_closes_at" %>
+          <%= form.select :"#{day.downcase}_re_closes_at",time_select_options, label: "Close Time", include_blank: "Closed" %>
+        </div>
+      </td>
+      
+    <% end %>
+    <%= form.submit "Valid" %>
 <% end %>
+
+
