--- a/app/views/shops/new.html.erb
+++ b/app/views/shops/new.html.erb
@@ -16,18 +16,16 @@
       </td>
       <td class="afternoon">
         <div class="form-group">
-          <%= form.label :"#{day.downcase}_re_opens_at" %>
+          <%= form.label :"#{day.downcase}_opens_at" %>
           <%= form.select :"#{day.downcase}_opens_at",time_select_options, label: "Open Time", include_blank: "Closed" %>
         </div>
 
         <div class="form-group">
         <%= form.label :"#{day.downcase}_closes_at" %>
-          <%= form.select :"#{day.downcase}_re_closes_at",time_select_options, label: "Close Time", include_blank: "Closed" %>
+          <%= form.select :"#{day.downcase}_closes_at",time_select_options, label: "Close Time", include_blank: "Closed" %>
         </div>
       </td>
       
     <% end %>
     <%= form.submit "Valid" %>
 <% end %>
-
-
