code refactoring in partial timetable added + css updating

--- a/app/views/shops/show.html.erb
+++ b/app/views/shops/show.html.erb
@@ -1,42 +1,3 @@
 <h2><%= @shop.name %></h2>
-<% p hours_keys = @shop_hour.hours.keys %>
 
-<% array_unsorted = [] %>
-
-<% for n in (0..6) %>
-<% element = I18n.localize Date.today + n, format: :very_short %>
-<% array_unsorted << element %>
-<% end %>
-
-
-<ul>
-    <% hours_keys.each_with_index do |element,index| %>
-          <% if @shop_hour.hours["#{element}"].first[0] == "" %>
-            <li><%= array_unsorted[index].capitalize%> - Fermé </li>
-          
-            <% elsif index == 0 %>  
-            <b>
-                <li><%= array_unsorted[index].capitalize  %>
-                    - <%= @shop_hour.hours["#{element}"].first[0]%>
-                    - <%= @shop_hour.hours["#{element}"].first[1]%> 
-                    - <%= @shop_hour.hours["#{element}"].first(2).last[0]%>
-                    - <%= @shop_hour.hours["#{element}"].first(2).last[1]%>
-                </li>
-            </b>
-            <% elsif  @shop_hour.hours["#{element}"].first[0] == @shop_hour.hours["#{element}"].first(2).last[0] %>
-                <li><%= array_unsorted[index].capitalize  %>
-                    - <%= @shop_hour.hours["#{element}"].first[0]%>
-                    - <%= @shop_hour.hours["#{element}"].first[1]%> 
-                </li> 
-
-            <% else %>
-                <li><%= array_unsorted[index].capitalize  %>
-                - <%= @shop_hour.hours["#{element}"].first[0]%>
-                - <%= @shop_hour.hours["#{element}"].first[1]%> 
-                - <%= @shop_hour.hours["#{element}"].first(2).last[0]%>
-                - <%= @shop_hour.hours["#{element}"].first(2).last[1]%>
-                </li>   
-        <% end %>  
-      <% end %>
-</ul>
-
+<%= render partial: 'timetable' %>
