--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,21 @@
  *= require_tree .
  *= require_self
  */
+
+ body {
+    margin-left: 25px;
+ }
+
+ ul {
+    list-style-type: none; 
+    padding: 0; 
+    margin: 0; 
+  }
+
+  li {
+    margin-left: 70px;
+  }
+
+#current-date {
+    margin-left: 0px;
+}
